--- a/skyfolk/static/css/timeline.css
+++ b/skyfolk/static/css/timeline.css
@@ -25,73 +25,11 @@
   background-color: rgba(44,44,44,0.777);
   box-shadow: 0.1px 0.1px grey;
   width: 10px;
-  height: 2800px;
+  max-height: auto;
+  height: 800px;
+  position: relative;
   display: block;
 }
-
-#section .wrapper .line .first {
-  position: relative;
-  width: 300px;
-  background-color: 0;
-  height: auto;
-  float: left;
-  left: -340px;
-  margin-bottom: 40px;
-  box-shadow: 0.1px 0.1px grey;
-  margin-bottom: 200px;
-  margin-top: 50px;
-}
-
-#section .wrapper .line .first .head {
-  background-color: rgba(44,44,44,1);
-  width: 100%;
-  height: 30px;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 20px;
-  padding: 0px 5px;
-  position: absolute;
-  color: white;
-  font-weight: 100;
-  margin: 5px 5px;
-}
-
-#section .wrapper .line .first .head em {
-  float: right;
-  width: 10px;
-  height: 10px;
-  background-color: rgba(44,44,44,1);
-  margin-top: 10px;
-  right: -5px;
-  position: absolute;
-  transform: rotate(45deg);
-}
-
-#section .wrapper .line .first .acontecimiento {
-  width: 40px;
-  height: 40px;
-  background-image: url("https://www.ameritas.com/wps/wcm/connect/corp/aa0baea3-3a84-467b-a710-089ab961326b/get-married-icon.png?MOD=AJPERES&CACHEID=aa0baea3-3a84-467b-a710-089ab961326b");
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: #fff;
-  border-radius: 100%;
-  border: 1px solid rgba(44,44,44,0.666);;
-  position: absolute;
-  top: 0px;
-  left: 322.5px;
-}
-
-#section .wrapper .line .first p {
-  position: relative;
-  display: inline-block;
-  top: 40px;
-  text-align: center;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 15px;
-  font-weight: 100;
-  color: #000;
-}
-
 /* Second */
 #section .wrapper .line .second {
   position: relative;
@@ -99,10 +37,12 @@
   background-color: 0;
   height: auto;
   float: right;
-  right: -340px;
-  margin-bottom: 40px;
+  right: -337px;
+  margin-bottom: 70px;
+  margin-top: 10px;
   box-shadow: 0.1px 0.1px grey;
 }
+
 
 #section .wrapper .line .second .head {
   background-color: rgba(44,44,44,1);
@@ -125,6 +65,8 @@
   left: -5px;
   position: absolute;
   transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
 }
 #section .wrapper .line .head a {
   position: relative;
@@ -133,7 +75,7 @@
   text-decoration: none;
   color: white;
 }
-#section .wrapper .line .second p {
+#section .wrapper .line .second #p {
   position: relative;
   display: inline-block;
   top: 40px;
@@ -141,9 +83,16 @@
   font-family: 'Open Sans', sans-serif;
   font-size: 15px;
   font-weight: 100;
+  height: auto;
+  width: 100%;
   color: #000;
 }
-
+#section .wrapper .line .second .head .fecha_ {
+  font-size: 10px;
+  float: right;
+  position: relative;
+  display: inline-block
+}
 #section .wrapper .line .second .contenidoadicional {
   width: 100%;
   height: auto;
@@ -165,8 +114,7 @@
 #section .wrapper .line .second .acontecimiento {
   width: 40px;
   height: 40px;
-  background-image: url("https://cdn0.iconfinder.com/data/icons/vacation-and-travel/80/Vacation_travel-08-512.png");
-  background-size: 80%;
+  background-size: 100%;
   background-repeat: no-repeat;
   background-position: center;
   background-color: #fff;
@@ -187,17 +135,16 @@
 }
 
 #section .wrapper .line .second .controles ul {
-  display: inline-block;
+  display: block;
   margin: auto;
+  margin-left: 60px;
   position: relative;
-  width: 100%;
+  width: 200px;
   height: 30px;
-  left: 55px;
 }
 
 #section .wrapper .line .second .controles ul li {
-  margin-right: 20px;
-  vertical-align: middle;
+  margin: 10px;
   color: #ccc;
   display: inline-block;
   transition: all .3s linear;
@@ -207,7 +154,13 @@
   padding: 10px 7px;
 }
 
-#section .wrapper .line .second .controles:hover > ul li {
-  margin-right: 20px;
-  vertical-align: middle;
+#section .wrapper .line .second .controles ul li:nth-child(1):hover { /* Boton me gusta (corazon) */
+    color: tomato;
+}
+#section .wrapper .line .second .controles ul li:nth-child(2):hover /* Boton compartir (flecha hacia derecha) */
+{
+  color: #fff;
+}
+#section .wrapper .line .second .controles ul li:nth-child(3):hover { /*Boton responder (flecha izquierda */
+ color: rgb(144,189,207)
 }
