--- a/Plantillas sin usar/Inteligencia emocional/im.css
+++ b/Plantillas sin usar/Inteligencia emocional/im.css
@@ -1,345 +1,140 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,500,200,300);
-@import url(http://fonts.googleapis.com/css?family=Lobster);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
 @import url(http://weloveiconfonts.com/api/?family=fontawesome);
 
 /* fontawesome */
 [class*="fontawesome-"]:before {
   font-family: 'FontAwesome', sans-serif;
 }
-
 body {
- font-family: Raleway;
-  background-color: #B4EEFF;
-  font-weight: 200;
-}
-header {
-  color: white;
-  box-shadow: 0.5px 0.5px;
-  min-width: 100%;
-  max-width: 100%;
-  height: auto;
-  border-radius: 7px;
+  background-color: #fff;
   font-family: 'Open Sans', sans-serif;
 }
+
+hgroup {
+  position: absolute;
+  margin-top: 20px;
+  display: block;
+  background-color: #fff;
+  color: #d6d6d6;
+  width: 98%;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+}
 h2 {
-	font-weight: 100;
-	font-size: 30px;
+  position: relative;
+  display: block;
+  margin-left: 20px;
 }
 h4 {
-	font-weight: 100;
-}
-p {
-  font-size: 2em;
-  font-family: 'Lobster', cursive;
-  position: absolute;
-  left: 23%;
-  margin: auto;
-  padding: 0;
-}
-hgroup {
-  margin: 10px;
-}
-section {
-  position: absolute;
-  top: 40%;
-  left: 12.123%;
-  height: 70%;
-  min-width: 37%;
-  max-width: 37%;
-  margin: auto;
-  padding: 0;
-  border-radius: 7px;
-  background-color:  rgba(255, 255, 255, 0.5);
-}
-div.contenedor {
   position: relative;
-  height: 100%;
-  width: 100%;
-  box-shadow: 0.5px 1px #fff;
-}
-div.contenedor p {
-	position: absolute;
-	top: -15%;
-}
-div.contactos {
-  width: 100%;
-  min-height: 80%;
-  max-height: 80%;
-  position: relative;
-  margin: auto;
-  padding: auto;
   display: block;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  margin-left: 30px;
+  font-size: 0.8em;
 }
-span {
-  position:relative;
-  top: 5%;
-  left: 0%;
-  margin: auto;
-}
-div.contactos ul li {
- list-style-type: none;
-  position: relative;
-  text-decoration: none;
-  margin-top: 10px;
-  margin: auto;
-  display: inline-block;
-}
-span img {
-  width: 60px;
-  height: 60px;
-  border-radius: 100%;
-  display: inline;
-  margin: auto;
-  padding: 0;
-  box-shadow: 1px 0.7px 0.2px 0.4px white;
-  transition: all .3s ease-in-out;
-}
-span a:active {
-  color: tomato;
-}
-span img:hover{
-  opacity: 0.8;
-}
-
-span a {
-  text-align: center;
-  position: relative;
-  top: -24px;
-  overflow: hidden;
-  margin: 40px;
-  color: #4D4D4D;
-  cursor: pointer;
-  transition: all .3s ease-in-out;
-}
-div.lista {
-  position: relative;
-  height auto;
-  top:0%;
-  border-top: 3px solid white;
-
-}
-input[type="search"] {
-    border-radius: 20px;
-    background: url('http://png-4.findicons.com/files/icons/1389/g5_system/32/toolbar_find.png') 9px 9px no-repeat, linear-gradient(to bottom, #f7f7f8 0%,#ffffff 100%);
-    background-size: 19px;
-    border: none;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.2) inset, 0 -1px 0 rgba(0,0,0,0.05) inset;
-  transition: all 0.2s linear;
-  font-size: 13px;
-  position: relative;
-  height: 36px;
-  width: 200px;
-  padding-left: 30px;
-  margin: auto;
-  color: grey;
-}
-div.lista ul li{
-list-style-type: none;
-  display: inline-block;
-  margin: 10px;
-  font-size: 1.4em;
-  color: #3A3A3A;
-  float: right;
-  position: relative;
-}
-div.lista ul li:hover {
-  color: tomato;
-}
-i {
+.fontawesome-circle-blank {
   font-style: normal;
-  margin: 15px;
-  cursor: pointer;
-  font-size: 30px;
-  transition: all .3s ease-in-out;
-}
-i:hover {
-  color: tomato;
-  -webkit-animation-name: colors;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-duration: 1s;
-}
- @-webkit-keyframes colors {
-   0%{-webkit-transform: scale3d(1, 1, 1);}
-   15%{-webkit-transform: scale3d(1.05, 1.05, 1.05);}
-   50%{color: #FF70E3;}
-   100%{color: tomato;}
- }
-div.contenedor2 {
-  left: 100%;
-  background-color: rgba(255, 255, 255, 0.5);
-  position: absolute;
-  min-width: 100%;
-  max-width: 100%;
-  height: 50%;
-  top: 0%;
-  margin-left: 20%;
-  display: inline-block;
-  border-bottom-left-radius: 7%;
-  border-top-left-radius: 7%;
-  border-bottom-right-radius: 7%;
-}
-div.contenedor2 p {
-  top: -30%;
-  position: absolute;
-
-  
-}
-div.relaciones {
   position: relative;
-  min-width: 100%;
-  max-width: 100%;
-  height: 70%;
+  margin-left: 17px;
+}
+.relations {
+  position: absolute;
+  display: block;
+  width: 90%;
+  min-height: 90%;
+  height: auto;
+  font-family: 'Open Sans', sans-serif;
+  background-color: #fff;
+  top: 20%;
   margin: auto;
-  padding: 0;
-  top: 0%;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  left: 5%;
 }
-div.relaciones ul li {
-  list-style-type: none;
-  text-decoration: none;
+.relations .per_o {
+  width: 240px;
+  height: 210px;
   position: relative;
-  left: 10%;
-  margin: auto;
-  padding: 0;
+  overflow: hidden;
+  box-shadow: 0 1px #FFFFFF inset, 0 1px 3px rgba(34, 25, 25, 0.4);
+  background-color: #fff;
 }
-div.relaciones span {
-  float: left;
-  left: -10%;
-  position: relative;
+.relations .per_o img {
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
 }
-div.relaciones i {
-  text-type: normal;
-  color: tomato;
-  position: relative;
-  display: inline;
-  top: -17px;
-  right: 17px;
-  padding: 0;
-  cursor: pointer;
-}
-  div.relaciones i.fontawesome-heart:hover {
-    color: #F00F74;
-   -webkit-animation-name: pulse;
-  animation-name: pulse;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-}
-@-webkit-keyframes pulse {
-  25% {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-  }
-
-  75% {
-    -webkit-transform: scale(0.9);
-    transform: scale(0.9);
-  }
-}
-div.relaciones i.fontawesome-suitcase:hover {
-  color: grey;
-  -webkit-animation-name: boom;
-  animation-name: boom;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: 1;
-  animation-iteration-count: 1;
-}
-@-webkit-keyframes boom {
-  25% {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-  }
-}
-div.relaciones i.fontawesome-group:hover {
-  color: aquamarine;
-  -webkit-animation-name: bizz;
-  animation-name: bizz;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: 1;
-  animation-iteration-count: 1;
-}
-@-webkit-keyframes bizz {
-  25% {
-    -webkit-transform: translate(10px);
-    transform: translate(10px);
-  }
-}
-div.relaciones i.fontawesome-lock:hover {
-  color: black;
-  -webkit-animation-name: lock;
-  animation-name: lock;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: 1;
-  animation-iteration-count: 1;
-}
-@-webkit-keyframes lock {
-  25% {
-    -webkit-transform: scale(1.2);
-    transform: scale(1.2);
-  }
-}
-div.options {
-  border-top: 2px solid #fff;
-}
-div.options ul li{
-  list-style-type: none;
-  display: inline-block;
-  margin: 10px;
-  font-size: 1.4em;
-  color: #3A3A3A;
-  float: right;
-  position: relative;
-}
-a.fontawesome-fire {
-  float: right;
+.relations .inf_o {
   position: absolute;
-  right: 3%;
-  top: 5%;
-  color: #FFA732;
-  font-size: 40px;
-  background: #fff;
-  padding: 10px 20px 10px 20px;
-  border-radius: 100%;
-  transition: all .3s ease-in-out;
-  cursor: pointer;
+  z-index: 9999;
+  top: 76.54%;
+  width: 240px;
+  height: 50px;
+  background-color: rgba(240,240,240,0.75);
+}
+.relations .inf_o h5 {
+    color: #3f3f3f;
+    position: relative;
+    top: -18px;
+    margin-left: 15px;
+    display: list-item;
+    list-style-type: none;
+}
+.relations .inf_o i {
+  display: list-item;
+  font-size: 12px;
+  position: absolute;
+  top: 30px;
+  color: #76adff;
+  margin-left: 17px;
+  list-style-type: none;
+}
+em {
+  position: absolute;
+  top: 5px;
+  float: right;
+  right: 15px;
+  font-style: normal;
+  font-size: 29px;
+}
+/* Colores de relacion */
+.fontawesome-heart {color: #ff4787;}
+.fontawesome-beer {color: #edbf22;}
+.fontawesome-user {color: #96cdff;}
+.fontawesome-globe {color: #1e9fc3}
 
-}
-a.fontawesome-fire:hover {
-  color: white;
-  background-color: #FFA732;
--webkit-animation: backk 5s infinite; /* Chrome, Safari, Opera */
-    animation: backk 5s infinite;
+.relations li {
+    display: inline-block;
+    margin-bottom: 30px;
+    margin-left: 15px;
 }
 
-@-webkit-keyframes backk {
-  0% { background-color: #FFA732;}
-  15% {background-color: #7EEF66;}
-  30% {background: tomato;}
-  50% {background-color: #F066A3;}
-  75% {background-color: #7009F8}
-  100% {background-color: #03C1F7}
+/* IMPORTANTE BARRA DE PROGRESO */
+.per_o:hover {
+  background-color: transparent;
 }
-@keygrames backk {
-    0% { background-color: #FFA732;}
-  15% {background-color: #7EEF66;}
-  30% {background: tomato;}
-  50% {background-color: #F066A3;}
-  75% {background-color: #7009F8}
-  100% {background-color: #03C1F7}
+.per_o:hover > .progress {
+  height: 100px;
+   width: 100px;
+   position: relative;
+   margin: auto;
+   overflow: hidden;
+   opacity: 1;
+   top: 30px;
+   z-index: 9999;
+}
+.progress {
+   height: 0px;
+   width: 0px;
+   position: relative;
+   margin: auto;
+   overflow: hidden;
+   opacity: 0;
+   top: -10px;
+   z-index: 9999;
+   transition: all .3s linear;
+   -moz-trasition: all .3s linear;
+   -webkit-transition: all .3s linear;
+}
+.progress > svg {
+    height: 100%;
+    display: block;
 }
