--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -8,7 +8,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css' />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.0.min.js" /></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.min.css" rel="stylesheet" />
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	
 	
 
@@ -47,11 +47,12 @@
     <nav>
       <li class="perfil" onclick="javascript:window.location.href='/config/profile'"><i class="fontawesome-user"></i>Perfil</li>
       <li class="Contraseña" onclick="javascript:window.location.href='/accounts/password/change/'"><i class="fontawesome-lock"></i>Contraseña</li>
-      <li class="Seguridad"><i class="fontawesome-eye-open"></i>Seguridad y privacidad</li>
+      <li class="Seguridad"><i class="fa fa-eye fa"></i>Seguridad y privacidad</li>
       <li class="Movil"><i class="fontawesome-envelope-alt"></i>Movil y correo</li>
       <li class="widgets"><i class="fontawesome-list-ul"></i>Widgets</li>
       <li class="Diseño"><i class="fontawesome-dashboard"></i>Diseño</li>
       <li class="ban"><i class="fontawesome-minus-sign"></i>Cuentas bloqueadas</li>
+      <li onclick="javascript:window.location.href='/config/relations'" class="relaciones"><i class="fa fa-circle-thin fa"></i>Mis relaciones</li>
     </nav>
   </aside>
 <div id="contra">
