--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -612,63 +612,36 @@
 
 </div>
 <div id="section">
-
 <div class="wrapper">
     <div class="line">
-   <li>
-        <div data-sr="wait 0.2s then scale up 30%" class="first">
-          <span class="acontecimiento"></span>
-          <span class="head"><a>{{user_profile.username}}</a><em></em></span>
-          <p>Pedro y Rosa te han invitado a su boda, ¡enhorabuena!</p>
-        </div>
-      </li>
+    {% for item in publications_top15 %}
       <li>
       <div data-sr="wait 0.2s then scale up 30%" class="second">
-        <span class="acontecimiento"></span>
-          <span class="head"><a>{{user_profile.username}}</a><em></em></span>
-          <p>Ha subido una foto con Pepe.</p>
+      {% if user_profile.profile.image %}
+        <span class="acontecimiento" style="background-image: url('{{user_profile.profile.image.url}}');"></span>
+        {% else %}
+         <span class="acontecimiento" style="background-image: url('{{STATIC_URL}}img/generic-avatar.png');"></span>
+         {% endif %}
+          <span class="head"><a>{{user_profile.username}}  <a class="fecha_" target="_blank">{{item.from_publication__created}}</a></a><em></em></span>
+          <div id="p" class="parrafo comment">
+           {{item.from_publication__content}}
+           </div>
         <div class="contenidoadicional">
-          <img src="http://archive.eusa.eu/files/News/2012/photoc-camera_w2.jpg" title="random_photo" alt="random_photo">
+          <!--<img src="http://archive.eusa.eu/files/News/2012/photoc-camera_w2.jpg" title="random_photo" alt="random_photo">-->
         </div>
         <div class="controles">
           <ul>
-            <li class="fa fa-heart fa-lg"></li>
-            <li class="fa fa-heart fa-share"></li>
-            <li class="fa fa-heart fa-reply"></li>
+            <li class="fa fa-heart fa-2x"></li>
+            <li class="fa fa-share fa-2x"></li>
+            <li class="fa fa-reply fa-2x"></li>
           </ul>
         </div>
         </div>
       </li>
-
-  <li>
-        <div data-sr="wait 0.2s then scale up 30%" class="first">
-          <span class="acontecimiento"></span>
-          <span class="head"><a>{{user_profile.username}}</a><em></em></span>
-          <p>Pedro y Rosa te han invitado a su boda, ¡enhorabuena!</p>
-        </div>
-      </li>
-      <li>
-      <div data-sr="wait 0.2s then scale up 30%" class="second">
-        <span class="acontecimiento"></span>
-          <span class="head"><a>{{user_profile.username}}</a><em></em></span>
-          <p>Ha subido una foto con Pepe.</p>
-        <div class="contenidoadicional">
-          <img src="http://archive.eusa.eu/files/News/2012/photoc-camera_w2.jpg" title="random_photo" alt="random_photo">
-        </div>
-        <div class="controles">
-          <ul>
-            <li class="fa fa-heart fa-lg"></li>
-            <li class="fa fa-heart fa-share"></li>
-            <li class="fa fa-heart fa-reply"></li>
-          </ul>
-        </div>
-        </div>
-      </li>
-
+      {% endfor %}
     </div>
 
   </div>
-
 </div>
 </body>
 <!-- IGNORAR, SOLO MUESTRA OBJETOS AL HACER SCROLL -->
