--- a/skyfolk/templates/account/base.html
+++ b/skyfolk/templates/account/base.html
@@ -31,8 +31,8 @@
 	<li><a href="{% url 'account_email' %}">Change E-mail</a></li>
 	<li><a href="{% url 'account_logout' %}">Sign Out</a></li>
 	{% else %}
-	<li><button class="btn btn-success" onclick="javascript:location.href='{% url 'account_login' %}'">Iniciar Sesión</button></li>
-	<li><button class="btn btn-info" onclick="javascript:location.href='{% url 'account_signup' %}'">Registrarme</button></li>
+	<li><a class="btn btn-success" onclick="javascript:location.href='{% url 'account_login' %}'">Iniciar Sesión</a></li>
+	<li><a class="btn btn-info" onclick="javascript:location.href='{% url 'account_signup' %}'">Registrarme</a></li>
 	{% endif %}
       </ul>
     </div>
