--- a/skyfolk/templates/account/login.html
+++ b/skyfolk/templates/account/login.html
@@ -39,8 +39,8 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 -->
 {% endif %}
-<div class="block-form">
-	<h3>Iniciar sesión</h3>
+<div class="row grey darken-2 z-depth-2">
+	<h5>Iniciar sesión</h5>
 	<form class="login form-3" method="POST" action="{% url 'account_login' %}">
 		<div class="form-group">
 	  {% csrf_token %}
@@ -50,8 +50,8 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
 	  {% endif %}
 	  </div>
 	  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-	  <button class="btn btn-success" type="submit">{% trans "Sign In" %}</button>
-	  <button type="button" class="btn btn-info" onclick="javascript:location.href='{{ signup_url }}'">{% trans "Sign Up" %}</button>
+	  <button id="iniciar_sesion" class="waves-effect waves-light btn" type="submit">{% trans "Sign In" %}</button>
+	  <a id="registrar" type="button" class="waves-effect waves-light btn" onclick="javascript:location.href='{{ signup_url }}'">{% trans "Sign Up" %}</a>
 	</form>
 </div>
 {% endblock %}
