--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -12,20 +12,18 @@
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/jquery.gritter.css" />
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/timeline.css" />
-<!--  <link rel="stylesheet" href="{{STATIC_URL}}media/bootstrap/css/bootstrap.min.css"/> -->
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
-<!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
+
 <script src="{{STATIC_URL}}js/jquery.min.js"></script>
 <script src="{{STATIC_URL}}js/jquery-ui.js"></script>
-<!--  <script src="{{STATIC_URL}}media/bootstrap/js/bootstrap.min.js"></script> -->
 <script src="{{STATIC_URL}}js/jquery.easytabs.js"></script>
 <script src="{{STATIC_URL}}js/jquery.gritter.js"></script>
 <script src="{{STATIC_URL}}js/profile.js"></script>
 <script src="{{STATIC_URL}}js/jquery.colorbox.js"></script>
 <script src="{{STATIC_URL}}js/noti.js"></script>
 <script src="{{STATIC_URL}}js/notia.js"></script>
+<script src="{{STATIC_URL}}js/drag.js"></script> <!-- Permite mover el bloque donde se escribe un nuevo mensaje -->
 <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js"></script>
-<script src="{{STATIC_URL}}js/drag.js"></script>
 <script src="{{STATIC_URL}}js/scrollReveal.js"></script>
 <script src="{{STATIC_URL}}js/scrollReveal.min.js"></script>
 
