--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -5,6 +5,8 @@ body {
                        padding: 0;
                        margin: auto;
                        background-size: 100%;
+                       min-height: 100vh;
+                       flex-direction: column;
                        background-repeat: no-repeat;
 }
 
@@ -12,6 +14,7 @@ body {
 #background_cycler{padding:0;margin:0;width:100%;position:absolute;top:0;left:0;z-index:-1;height:100%;}
 #background_cycler img{position:absolute;left:0;top:0;width:100%;z-index:1;height: 100%;}
 #background_cycler img.active{z-index:3};
+
 /* LOGO */
 .namesn {
   position: relative;
@@ -55,57 +58,26 @@ body {
   text-shadow: 1px 1px 1px #0096d7;
 }
 
-footer {
+.page-footer {
   width: 100%;
-  background-color: rgba(44,44,44,0.254);
   position: fixed;
   height: 20px;
   bottom: 0;
-    -webkit-transition: all .3s ease-in;
-    -moz-transition: all .3s ease-in;
-    transition: all .3s ease-in;
+  -webkit-transition: all .3s ease-in;
+  -moz-transition: all .3s ease-in;
+  transition: all .3s ease-in;
 }
-footer ul {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  margin: auto;
-}
-footer li {
-  display: inline-block;
-  margin-right: 20px;
-  list-style-type: none;
-  text-align: center;
-  text-decoration: none;
-  color: grey;
-  font-size: 16px;
-  position: relative;
-  left: 40%;
-}
+
 .flex {
   position: relative;
   margin: auto;
   width: 40px;
   height: 40px;
-  background-color: rgba(44,44,44,0.854);
-  background-image: url('https://cdn2.iconfinder.com/data/icons/antto-basic-1/423/More-512.png');
-  background-position: center;
-  background-size: 80%;
-  background-repeat: no-repeat;
   top: -20px;
-  -webkit-transform: rotate(45deg);
-  -moz-transition: rotate(45deg);
-  transition: rotate(45deg);
 }
   footer:hover {
     height: 100px;
 }
-  footer:hover > .flex {
-    border: 1px solid #7edc1f;
-    -webkit-transform: rotate(75deg);
-    -moz-transition: rotate(75deg);
-    transition: rotate(75deg);
-  }
 .row{
     width: 370px;
     height: 350px;
@@ -117,7 +89,14 @@ footer li {
     font-family: 'PT Sans', sans-serif; 
 
 }
-
+.flex #about {
+  position: relative;
+  display: inline-block;
+  top: -40px;
+  float: left;
+  width: auto;
+  height: 100px;
+}
 form {
     position: relative;
     top: 23px;
