--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -4,32 +4,27 @@
     <head>
         <!-- Hojas de estilo SASS -->
 
-	       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" author="Adrian,Carlos, Nestor"/>
+	       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" author="Skyfolk"/>        
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/noti.css" />
-         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}media/bootstrap/css/bootstrap.css" />
-         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}media/bootstrap/css/bootstrap.min.css" />
-         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}media/bootstrap/css/bootstrap-theme.css" />
-         <script src="{{STATIC_URL}}media/bootstrap/js/bootstrap.js"></script>
-         <script src="{{STATIC_URL}}media/bootstrap/js/bootstrap.min.js"></script>
-         <script src="{{STATIC_URL}}media/bootstrap/js/npm.js"></script>
-         
-         <script type="text/javascript" src="http://www.google.com/jsapi"></script>
-         <script type="text/javascript">google.load('jquery', '1.7.1');</script>
-         <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-          <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-		      <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/noti.css" />
+        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}media/bootstrap/css/bootstrap.css" />
+        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}media/bootstrap/css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}media/bootstrap/css/bootstrap-theme.css" />
         <title>¡Bienvenido a Skyfolk! - Iniciar sesión</title>
         <meta name="keywords" content="skyfolk, social, login, registro, sky, folk," />
         <link rel="shortcut icon" href="{{STATIC_URL}}img/logo.ico"> 
-	      <script src="{{STATIC_URL}}js/showandhide.js"></script>
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/style.css" />
 
-        <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.min.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.min.css"  media="screen,projection"/>
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
 		  <script src="{{STATIC_URL}}js/modernizr.custom.63321.js"></script>
+      <script src="{{STATIC_URL}}media/bootstrap/js/bootstrap.js"></script>
+      <script src="{{STATIC_URL}}media/bootstrap/js/bootstrap.min.js"></script>
+      <script src="{{STATIC_URL}}media/bootstrap/js/npm.js"></script>
+      <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+      <script src="{{STATIC_URL}}js/showandhide.js"></script>
     <!-- IMPORTANTE PARA CAMBIO DE BACKGROUND -->
       <script>
 
@@ -78,15 +73,20 @@
        	
        {% block content %}{% endblock %}
 
-  <footer class="page-footer grey darken-4">
+  <footer class="page-footer grey lighten-4">
          <div class="flex">
+
+            <div class="row">
+
+         <div class="col s1 grey lighten-1" id="about">
+            <a>Sobre Skyfolk.</a>
+          </div>
+
+            </div>
+
          </div>
-            <ul>
-                   <li><a>About us</a></li>
-                    <li><a>Our team</a></li>
-                      <li><a>Compromise</a></li>
-            </ul>
   </footer>
-    </body>
+  
+</body>
 
 </html>
