--- a/skyfolk/templates/account/login.html
+++ b/skyfolk/templates/account/login.html
@@ -39,7 +39,7 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 -->
 {% endif %}
-<div class="row grey darken-2 z-depth-2">
+<div id="login" class="row grey darken-2 z-depth-2">
 	<h5>Iniciar sesión</h5>
 	<form class="login form-3" method="POST" action="{% url 'account_login' %}">
 		<div class="form-group">
