--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -442,6 +442,16 @@
 							    <div class="parrafo comment">
 							      <a target="_blank">{{item.from_publication__created}}</a><br>{{item.from_publication__content}}
 							    </div>
+              <!-- OPCIONES DE COMENTARIOS -->
+                <div class="optiones_comentarios">
+                    <ul class="opciones">
+                       <li><i class="fa fa-heart"></i></li>
+                       <li><i class="fa fa-quote-left"></i></li>
+                       <li><i class="fa fa-reply"></i></li>
+                       <li><i class="fa fa-tag"></i></li>
+                    </ul>
+                </div>
+
 							  </article>
 					  	</div>
 					
