--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -59,29 +59,27 @@ margin-top: -24px;
   line-height: 1.5rem;
   word-wrap: break-word;
 }
-.wrapper:hover .image:hover{
-  border-right: 97px solid #21abcd;
-}
+
 .image{
   float:left;
   position: relative;
-  top: 20px;
-  left: 40px;
+  top: 10px;
+  left: 10px;
   cursor:pointer;
+  border: 2px solid grey;
   background-position: center;
-  border: 3px solid #21abcd;
-  border-right: 4px solid #21abcd;
   width:100px;
   height:100px;
+  border-radius: 100%;
+  border-bottom-right-radius: 40px;
   overflow:hidden;
-  -webkit-transform:translateX(-30px);
-  -moz-transform:translateX(-30px);
-  -o-transform:translateX(-30px);
-  transform:translateX(-30px);
   -webkit-transition:.5s;
   -moz-transition:.5s;
   -o-transition:.5s;
   transition:.5s;
+  -webkit-box-shadow: 0px 0px 2.5px 0px rgba(0,0,0,0.15);
+  -moz-box-shadow: 0px 0px 2.5px 0px rgba(0,0,0,0.15);
+  box-shadow: 0px 0px 2.5px 0px rgba(0,0,0,0.15);
 }
 #profile {
   position: relative;
@@ -482,7 +480,8 @@ a.fontawesome-cog:hover {
   transform: translateZ(0);
 }
 
-  .fontawesome-comment-alt {
+
+.fontawesome-comment-alt {
   display: inline-block;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
@@ -492,3 +491,27 @@ a.fontawesome-cog:hover {
   transform: translateZ(0);
 }
 
+/* OPCIONES COMENTARIOS */
+
+.optiones_comentarios {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: auto;
+}
+.optiones_comentarios ul li {
+  list-style-type: none;
+  display: inline-block;
+  font-size: 1.2em;
+  margin-left: 12px;
+  float: right;
+  cursor: pointer;
+}
+.optiones_comentarios ul li:hover {
+  -webkit-transform: scale(1.15);
+  -moz-transform: scale(1.15);
+  transform: scale(1.15);
+  transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -webkit-transition: all .3s ease-in-out;
+}
