--- a/skyfolk/templates/account/signup.html
+++ b/skyfolk/templates/account/signup.html
@@ -24,8 +24,8 @@
 	  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
 	  {% endif %}
 	  </div>
-	  <button class="btn btn-success" type="submit">{% trans "Sign In" %}</button>
-	  <button type="button" class="btn btn-info" onclick="javascript:location.href='{{ signup_url }}'">{% trans "Sign Up" %}</button>
+	  <button id="sign_in_register" class="waves-effect waves-light btn" type="submit">{% trans "Sign In" %}</button>
+	  <button id="sign_up_register" type="button" class="waves-effect waves-light btn" onclick="javascript:location.href='{{ signup_url }}'">{% trans "Sign Up" %}</button>
 	</form>
 </div>
 
