--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -68,10 +68,10 @@ margin-top: -24px;
   cursor:pointer;
   border: 2px solid grey;
   background-position: center;
+  padding: 0 0;
   width:100px;
   height:100px;
   border-radius: 100%;
-  border-bottom-right-radius: 40px;
   overflow:hidden;
   -webkit-transition:.5s;
   -moz-transition:.5s;
