--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1091,18 +1091,6 @@ box-shadow: 0px 0px 13px 1px rgba(183,182,224,1);
   border: 1px solid #D2FF78;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
 ul.table > li {
   display: table-cell; }
 
@@ -1119,11 +1107,20 @@ ul.table > li {
   top: 0px;
   z-index: 9999;
   margin-bottom: 200px;
-  background-image: url('http://s11.postimg.org/58jltbaqb/logo.png');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 120px;
 }
+.logotipo_skyfolk {
+  position: fixed;
+  width: 47px;
+  background-image: url('http://s11.postimg.org/58jltbaqb/logo.png');
+  background-size: 120px;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 47px;
+  margin: auto;
+  left: 50%;
+  cursor: pointer;
+}
+
 .box-tool .logo {
   position: fixed;
   margin: auto;
@@ -1666,7 +1663,7 @@ float:left;
 
 /* timeline */
 
-span.fontawesome-bookmark {
+.fontawesome-bookmark {
 position: relative;
 font-size: 20px;
 overflow: hidden;
@@ -1681,6 +1678,7 @@ border-top-left-radius: 7px;
 border-top-right-radius: 7px;
 cursor: pointer;
 }
+
 @media only screen and (max-width: 640px) {
     .aboutuser {
           left: 300px;
@@ -1697,5 +1695,17 @@ cursor: pointer;
 @media only screen and (max-width: 640px) {
   .box-tool {
     background-image: none;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .box-tool {
+    width: 100%;
+  }
+  .logotipo_skyfolk {
+    display: none;
+  }
+  .notificationss, .fa-comment {
+    display: none;
   }
 }
