--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -120,10 +120,14 @@ top.window.outerWidth = screen.availWidth;
 		<!--<button type="submit" class="btn" onclick="javascript:window.location.href='/search'">¡Buscar!</button>-->
 
 	</form>
-	
+  <!-- Logotipo que re-direcciona a la pagina principal -->
+	<li>
+  <div class="logotipo_skyfolk" onclick="javascript:window.location.href='/'">
+
+  </div>
+  </li>
 
   	</div>
-  	</li>
   	</li>
   	<li class="fa fa-comment fa-lg"></li>
       <div class="notificationss">
