--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -110,6 +110,30 @@ top.window.outerWidth = screen.availWidth;
 <div id="ffacebook" class="size left"><span class="entypo-calendar"></span></div>
 <div id="ttwitter" class="size right"><span class="entypo-logout"></span></div>
     </button>-->
+  {% if user_profile.profile.image %}
+<div id="toggle">
+  <nav class="menup">
+    <li class="profilee"><img src="{{user_profile.profile.image.url}}"><i>{{user_profile.username}}</i></li>
+    <li onclick="javascript:location.href='/config/profile'"><i class="fa fa-cog fa-lg"></i> Configuracion </li>
+    <li onclick="javascript:location.href='/messages'"><i class="fa fa-inbox fa-lg"></i> Mensajes privados </li>
+    <li><i class="fa fa-bookmark-o fa-lg"></i> Market</li>
+    <li><i class="fa fa-circle-o fa-lg"></i> Mis relaciones</li>
+    <li><i class="fa fa-play fa-lg"></i> Multimedia</li>   
+  </nav>
+</div>
+{% else %}
+<div id="toggle">
+  <nav class="menup">
+    <li class="profilee"><img src="{{STATIC_URL}}img/generic-avatar.png"><i>{{user_profile.username}}</i></li>
+    <li onclick="javascript:location.href='/config/profile'"><i class="fa fa-cog fa-lg"></i> Configuracion</li>
+    <li onclick="javascript:location.href='/messages'"><i class="fa fa-inbox fa-lg"></i> Mensajes privados </li>
+    <li><i class="fa fa-bookmark-o fa-lg"></i> Market</li>
+    <li><i class="fa fa-circle-o fa-lg"></i> Mis relaciones</li>
+    <li><i class="fa fa-play fa-lg"></i> Multimedia</li>   
+  </nav>
+</div>
+{% endif %}
+
 <li><div class="field" id="searchform">
   	<!--<input type="text" id="searchterm" placeholder="¿Que es lo que quieres buscar?" />-->
   	<!--<button type="submit" class="btn">¡Buscar!</button>-->
