--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -1,152 +1,6 @@
-<head>
-<style>
-.container {
-  list-style-type: none;
-  top: 70px;
-  position: relative;
-}
-.container li {
-  margin-right: 5px;
-  display: inline-block;
-  margin-top: 10px;
-}
-.target {
-  width: 280px;
-  height: 380px;
-  background-color: #fff;
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
--moz-box-shadow:    0px 0px 5px 0px rgba(50, 50, 50, 0.75);
-box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.75);
- font-style: normal;
-  
-}
-.target .photos {
-  width: 100%;
-  height: 50%;
-}
-.target .photos .cabeza {
-  background-image: url('http://www.hdwallpapers.in/walls/colorful_abstraction-wide.jpg');
-  background-size: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 90%;
-  border-bottom: 4px solid rgba(44,44,44,0.777);
-}
-.proffile {
-  width: 74px;
-  height: 74px;
-  position: relative;
-  margin: auto;
-  
-  /*
-  background-color: #000;
-  background-size: 130px;
-  background-position: center;
-  background-repeat: no-repeat;
-  */
-  top: 60%;
-  /*border: 2px solid rgba(44,44,44,0.777);*/
-  cursor: pointer;
+<!DOCTYPE html>
 
-  padding:1px;
-}
-.proffile img{
-	
-	width: 74px;
-	height: 74px;
-	border: 4px solid rgba(44,44,44,0.777);
-	
-	
-}
-.relation {
-  position: relative;
-  display: block;
-  margin: auto;
-  left: 0%;
-  top: 37%;
-  padding: 5px 7px 30px 7px;
-  background-color: rgba(44,44,44,0.777);
-  width: 60px;
-  border-radius: 30px;
-  height: 12px;
-  text-align: center;
-  color: white;
-  font-size: 1em;
-  font-family: 'Open Sans', sans-serif;
-}
-.fa-user {
-  margin-left: 1px;
-}
-.informacion {
-  list-style-type: none;
-  top: 20px;
-  margin: auto;
-  position: relative;
-  font-family: 'Open Sans', sans-serif;
-  font-style: normal;
-  left: 0px;
-  max-width: 200px;
-  text-align: center;
-  
-}
-.informacion li {
-  display: list-item;
-}
-.nombre  {
-  font-size: 1.2em;
-  display: block;
-  vertical-align: middle;
-  position: relative;
-}
-.apodo {
-  font-size: 0.9em;
-  display: block;
-  vertical-align: middle;
-  line-height: 5px;
-  position: relative;
-  color: #53A8A8;
-}
-.estado {
-  top: 25px;
-  display: block;
-  vertical-align: middle;
-  position: relative;
-}
-.controls {
-  position: relative;
-  top: 69px;
-  list-style-type: none;
-  font-family: 'Open Sans', sans-serif;
-  color: rgba(44,44,44,0.866);
-  background-color: rgba(44,44,44,0.055);
-  padding: 30px 70px;
-  right: 0px;
-}
-.controls li {
-  display: inline-block;
-  margin-left: 2px;
-  margin-top: -10px;
-  float: right;
-  margin-right: 15px;
-  text-align: center;
-  cursor: pointer;
-  -webkit-transition: all .3s linear;
-  -moz-transition: all .3s linear;
-  transition: all .3s linear;
-}
-.fa-plus:hover {
-  color: #246068;
-  
-}
-.fa-heart:hover {
-  color: tomato;
-}
-.fa-reply:hover {
-  color: #2E4272;
-}
-</style>
-</head>{% extends 'account/base_interface.html' %}
+{% extends 'account/base_search.html' %}
 
 {% block content %}
 
@@ -155,21 +9,20 @@ box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.75);
 {% if resultSearch|length = 0 %}
 	<div id="search-noelements">Sin resultados</div>
 {% endif %}
-
-
-	<ul class="container">
+<ul>
+<div class="container">
+<div class="row" id="contenedor">
 	{% for item in resultSearch %}
 <li>
-<div class="target">
- <div class="photos">
-   <div class="cabeza">
-     <span class="relation">Friend<i class="fa fa-user fa-lg"></i></span>
-     <div class="proffile" onclick="location.href='/profile/{{item.username}}'">
-
+<div class="col s4 m3 l4" id="target">
+ <div id="photos" clas="col s4">
+   <div class="col s4 m3 l4" id="cabeza">
+     <span class="relation">Amigo<i class="fa fa-user fa-lg"></i></span>
+     <div class="col s5" id="proffile" onclick="location.href='/profile/{{item.username}}'">
 				{% if item.profile.image %}
-				   <img src="{{item.profile.image.url}}">
+				   <img class="circle responsive-img" src="{{item.profile.image.url}}">
 				{% else %}
-				   <img src="{{STATIC_URL}}img/generic-avatar.png">
+				   <img class="circle responsive-img" src="{{STATIC_URL}}img/generic-avatar.png">
 				{% endif %}
      </div>
    </div>
@@ -187,7 +40,8 @@ box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.75);
   </div>
   </li>
 	{% endfor %}
-	</ul>
 </div>
-
+</div>
 {% endblock %}
+
+</html>
