--- a/skyfolk/static/css/listado_busqueda.css
+++ b/skyfolk/static/css/listado_busqueda.css
@@ -1,6 +1,7 @@
 #target {
   width: 400px;
   margin-bottom: 120px;
+  margin-right: 15px  ;
 }
 
 #target #photos #cabeza {
@@ -28,16 +29,18 @@
   top: 37%;
   padding: 5px 7px 30px 7px;
   background-color: rgba(44,44,44,0.777);
-  width: 60px;
+  width: 120px;
   border-radius: 30px;
   height: 12px;
   text-align: center;
   color: white;
-  font-size: 1em;
+  font-size: 0.98em;
+  font-style: normal;
   font-family: 'Open Sans', sans-serif;
 }
 .fa-user {
-  margin-left: 1px;
+  margin-right: 7px;
+  margin-top: 5px;
 }
 .informacion {
   list-style-type: none;
@@ -66,6 +69,7 @@
   display: block;
   vertical-align: middle;
   line-height: 5px;
+  margin-top: 15px;
   position: relative;
   color: #53A8A8;
 }
@@ -77,7 +81,7 @@
 }
 .controls {
   position: relative;
-  top: 69px;
+  top: 60px;
   list-style-type: none;
   font-family: 'Open Sans', sans-serif;
   color: rgba(44,44,44,0.866);
@@ -87,10 +91,10 @@
 }
 .controls li {
   display: inline-block;
-  margin-left: 2px;
   margin-top: -10px;
   float: right;
-  margin-right: 15px;
+  margin-right: 20px;
+  margin-left: 20px;
   text-align: center;
   cursor: pointer;
   -webkit-transition: all .3s linear;
@@ -124,7 +128,7 @@
 
 .field>form input[type=text] {
   float: right;
-  right: 200px;
+  left: 350%;
   position:relative;
   width: 300px;
   background-color: #f0f0f0;
@@ -133,7 +137,6 @@
   height: 25px;
   top: 7px;
   text-align: left;
-  display: block;
   font-family: sans-serif;
   font-size: 14px;
   appearance: none;
@@ -212,7 +215,7 @@
   float: left;
   display: inline-block;
   position: relative;
-  right: 0px;
+  left: -350px;
   top: 14px;
   list-style-type: none;
   margin-left: 50px;
