--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -5,6 +5,8 @@
 {% block content %}
 
 <div class="container-search">
+<!-- BOTON PARA CREAR UN NUEVO GRUPO -->
+<a class="btn-floating btn-large waves-effect waves-light grey right"><i class="mdi-social-group-add"></i></a>
 
 {% if resultSearch|length = 0 %}
 	<div id="search-noelements">Sin resultados</div>
