--- a/skyfolk/static/css/timeline.css
+++ b/skyfolk/static/css/timeline.css
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100%;
 }
+
 #section .wrapper {
   position: relative;
   width: 900px;
@@ -15,7 +16,24 @@
   border: 0;
   box-shadow: 0;
 }
-
+@media only screen and (max-width: 800px) {
+  #section .wrapper {
+    width: 747px;
+  }
+}
+@media only screen and (min-width:800px) and (max-width: 900px) {
+  #section .wrapper {
+    width: 780px;
+  }
+}
+@media only screen and (min-width: 960px) and (max-width: 1350px) {
+  #section .wrapper {
+    width: 580px;
+  }
+  #section .wrapper .line {
+    left: -60px;
+  }
+}
 #section .wrapper .line li {
   list-style-type: none;
 }
