--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -20,6 +20,15 @@
 
 </script>  
 
+<!-- Cuando clickas en TimeLine se desplaza hacia abajo -->
+<script>
+function scrollWin() {
+    window.scrollBy(0,700);
+}
+
+</script>
+
+
   {% if liked == True %}
 
     <style type="text/css">
@@ -41,6 +50,8 @@
   {% endif %}
 
 {% endblock %}
+
+
 
 {% block content %}
 
@@ -145,7 +156,7 @@
  
       <div class="col-lg-6 col-md-12 col-sm-12">
         <div class="user-card card">
-          <span class="fontawesome-bookmark"> Timeline</span>
+          <span class="fontawesome-bookmark" onclick="scrollWin()"> Timeline</span>
             
          
           <div class="user-avatar"><img src="{{STATIC_URL}}img/1.jpg" class="user-bg"><span class="fa fa-paw fa-lg" title="Acerca de {{ user_profile.username }}"> </span>
