--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -81,8 +81,37 @@ margin-top: -24px;
   -moz-box-shadow: 0px 0px 2.5px 0px rgba(0,0,0,0.15);
   box-shadow: 0px 0px 2.5px 0px rgba(0,0,0,0.15);
 }
-#profile {
+.wrapper .box .zoom-pub {
   position: relative;
+  width: 20px;
+  height: 20px;
+  background-color: #fff;
+  border-radius: 100%;
+  float: right;
+  margin-right: 3px;
+  top: -5px;
+  -webkit-box-shadow: 0px 0px 1px 0px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow:    0px 0px 1px 0px rgba(50, 50, 50, 0.75);
+  box-shadow:         0px 0px 1px 0px rgba(50, 50, 50, 0.75);
+}
+.wrapper .box .zoom-pub .fa-expand {
+  text-align: center;
+  color: #2E2E2E;
+  font-size: 12.5px;
+  margin: auto;
+  margin-left: 4px;
+  -webkit-transition: all .3s linear;
+  -moz-transition: all .3s linear;
+  transition: all .3s linear;
+  cursor: pointer;
+}
+.wrapper .box .zoom-pub .fa-expand:hover {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  transform: scale(1.1);
+}
+input[type="checkbox"] {
+  opacity: 0;
 }
 .ampliado {
   width: inherit;
@@ -183,7 +212,7 @@ margin-top: -24px;
   resize: none;
 }
 input[type="checkbox"]{display:block;}
-#profile:checked ~ .ampliado {
+input[type="checkbox"]:checked ~ .ampliado {
   position: absolute;
   z-index: 9999;
   width: 365px;
