--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -7,6 +7,36 @@
 <div class="container-search">
 <!-- BOTON PARA CREAR UN NUEVO GRUPO -->
 <a class="btn-floating btn-large waves-effect waves-light grey right"><i class="mdi-social-group-add"></i></a>
+<!-- DIV PARA LA CREACION DEL GRUPO -->
+  <div class="crear-grupo">
+    
+      <div class="row">
+        <div class="col s12 m12 l12">
+          <div class="card">
+            <div class="card-image">
+              <img src="http://www.picturesforwalls.com/blackandwhite/newyork/images/brooklynarches.jpg">
+              <span class="card-title">Crear un nuevo grupo</span>
+            </div>
+            <div class="card-content">
+              <div class="row">
+                   <div class="input-field col s6">
+                  <input id="first_name" type="text" class="validate">
+                  <label for="first_name">Nombre del grupo</label>
+                </div>
+                <div class="input-field col s6">
+                  <input id="last_name" type="text" class="validate">
+                  <label for="last_name">Descripcion</label>
+                </div>
+             </div>
+            </div>
+            <div class="card-action"> 
+              <a class="waves-effect waves-light btn white-text text-lighten-3">Crear grupo</a>
+              <a class="waves-effect waves-light btn white-text text-lighten-3">Cancelar</a>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
 
 {% if resultSearch|length = 0 %}
 	<div id="search-noelements">Sin resultados</div>
@@ -47,6 +77,7 @@
   </li>
 	{% endfor %}
 </div>
+
 </div>
 {% endblock %}
 
