--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <!-- Hojas de estilo SASS -->
 
-	       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" author="Skyfolk"/>        
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" author="Skyfolk"/>        
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/noti.css" />
