--- a/skyfolk/templates/account/login.html
+++ b/skyfolk/templates/account/login.html
@@ -14,7 +14,7 @@
 
 {% block content %}
 
-<h1>{% trans "Sign In" %}</h1>
+<!-- <h1>{% trans "Sign In" %}</h1> --> 
 
 {% if socialaccount.providers  %}
 <p>{% blocktrans with site.name as site_name %}Please sign in with one
@@ -54,4 +54,5 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
 	  <a id="registrar" type="button" class="waves-effect waves-light btn" onclick="javascript:location.href='{{ signup_url }}'">{% trans "Sign Up" %}</a>
 	</form>
 </div>
+
 {% endblock %}
