--- a/skyfolk/templates/account/signup.html
+++ b/skyfolk/templates/account/signup.html
@@ -11,7 +11,10 @@
 {% endblock %}
 
 {% block content %}
+
+<!-- 
 <h1>{% trans "Sign Up" %}</h1>
+-->
 
 <!--<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>-->
 
@@ -25,7 +28,7 @@
 	  {% endif %}
 	  </div>
 	  <button id="sign_in_register" class="waves-effect waves-light btn" type="submit">{% trans "Sign In" %}</button>
-	  <button id="sign_up_register" type="button" class="waves-effect waves-light btn" onclick="javascript:location.href='{{ signup_url }}'">{% trans "Sign Up" %}</button>
+	  <button id="sign_up_register" type="button" class="waves-effect waves-light btn" onclick="javascript:location.href='{{ signup_url }}'"><!--{% trans "Sign Up" %}-->Limpiar</button>
 	</form>
 </div>
 
