--- a/skyfolk/static/css/timeline.css
+++ b/skyfolk/static/css/timeline.css
@@ -1,68 +1,69 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400);
 
-#section {
-  width: 100%;
-  height: 100%;
-}
+/* NOTA IMPORTANTE: LOS COMENTARIOS DENTRO DE LOS ESTILOS SON PARA EL TIMELINE DE ABAJO */
 
-#section .wrapper {
+#section .wrapperx {
   position: relative;
-  width: 900px;
-  top: 50px;
-  margin: auto;
+ /* width: 900px; */
+  width: 100%;
+  /*top: 50px; */
+  /*margin: auto; */
+  float: left;
+  left: 0px;
   height: auto;
-  overflow: hidden;
   background: 0;
   border: 0;
   box-shadow: 0;
 }
 @media only screen and (max-width: 800px) {
-  #section .wrapper {
-    width: 747px;
+  #section .wrapperx {
+    /*width: 747px; */
+    width: 100%;
   }
 }
 @media only screen and (min-width:800px) and (max-width: 900px) {
-  #section .wrapper {
-    width: 780px;
+  #section .wrapperx {
+    /*width: 780px; */
+    width: 100%;
   }
 }
 @media only screen and (min-width: 960px) and (max-width: 1350px) {
-  #section .wrapper {
-    width: 580px;
+  #section .wrapperx {
+    /* width: 580px; */
+    width: 100%;
   }
-  #section .wrapper .line {
-    left: -60px;
+  #section .wrapperx .line {
+    /* left: -60px;*/
+    width: 100%;
   }
 }
-#section .wrapper .line li {
+#section .wrapperx .line li {
   list-style-type: none;
 }
 
-#section .wrapper .line {
-  margin: auto;
+#section .wrapperx .line {
+  left: 30px;
   background-color: rgba(44,44,44,0.777);
   box-shadow: 0.1px 0.1px grey;
   width: 10px;
-  max-height: auto;
   height: 200px;
   position: relative;
   display: block;
 }
 /* Second */
-#section .wrapper .line .second {
+#section .wrapperx .line .second {
   position: relative;
-  width: 300px;
+  width: 350px;
   background-color: 0;
   height: auto;
   float: right;
-  right: -337px;
+  right: -387px;
   margin-bottom: 70px;
   margin-top: 10px;
   box-shadow: 0.1px 0.1px grey;
 }
 
-
-#section .wrapper .line .second .head {
+#section .wrapperx .line .second .head {
   background-color: rgba(44,44,44,1);
   width: 100%;
   height: 30px;
@@ -74,7 +75,7 @@
   font-weight: 100;
 }
 
-#section .wrapper .line .second .head em {
+#section .wrapperx .line .second .head em {
   float: left;
   width: 10px;
   height: 10px;
@@ -86,14 +87,14 @@
   -moz-transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
 }
-#section .wrapper .line .head a {
+#section .wrapperx .line .head a {
   position: relative;
   top: 5px;
   font-style: normal;
   text-decoration: none;
   color: white;
 }
-#section .wrapper .line .second #p {
+#section .wrapperx .line .second #p {
   position: relative;
   display: inline-block;
   top: 40px;
@@ -105,13 +106,13 @@
   width: 100%;
   color: #000;
 }
-#section .wrapper .line .second .head .fecha_ {
+#section .wrapperx .line .second .head .fecha_ {
   font-size: 10px;
   float: right;
   position: relative;
   display: inline-block
 }
-#section .wrapper .line .second .contenidoadicional {
+#section .wrapperx .line .second .contenidoadicional {
   width: 100%;
   height: auto;
   position: relative;
@@ -120,7 +121,7 @@
   border-top: 1px solid #ccc;
 }
 
-#section .wrapper .line .second .contenidoadicional img {
+#section .wrapperx .line .second .contenidoadicional img {
   width: 80%;
   border-radius: 7px;
   position: relative;
@@ -129,7 +130,7 @@
   margin-top: 30px;
 }
 
-#section .wrapper .line .second .acontecimiento {
+#section .wrapperx .line .second .acontecimiento {
   width: 40px;
   height: 40px;
   background-size: 100%;
@@ -141,10 +142,10 @@
   position: absolute;
   display: inline-block;
   top: -7px;
-  right: 322.5px;
+  right: 372.5px;
 }
 
-#section .wrapper .line .second .controles {
+#section .wrapperx .line .second .controles {
   position: relative;
   display: inline-block;
   width: 100%;
@@ -152,7 +153,7 @@
   margin-top: 10px;
 }
 
-#section .wrapper .line .second .controles ul {
+#section .wrapperx .line .second .controles ul {
   display: block;
   margin: auto;
   margin-left: 60px;
@@ -161,7 +162,7 @@
   height: 30px;
 }
 
-#section .wrapper .line .second .controles ul li {
+#section .wrapperx .line .second .controles ul li {
   margin: 10px;
   color: #ccc;
   display: inline-block;
@@ -172,13 +173,13 @@
   padding: 10px 7px;
 }
 
-#section .wrapper .line .second .controles ul li:nth-child(1):hover { /* Boton me gusta (corazon) */
+#section .wrapperx .line .second .controles ul li:nth-child(1):hover { /* Boton me gusta (corazon) */
     color: tomato;
 }
-#section .wrapper .line .second .controles ul li:nth-child(2):hover /* Boton compartir (flecha hacia derecha) */
+#section .wrapperx .line .second .controles ul li:nth-child(2):hover /* Boton compartir (flecha hacia derecha) */
 {
   color: #fff;
 }
-#section .wrapper .line .second .controles ul li:nth-child(3):hover { /*Boton responder (flecha izquierda */
+#section .wrapperx .line .second .controles ul li:nth-child(3):hover { /*Boton responder (flecha izquierda */
  color: rgb(144,189,207)
 }
